# com_subjective_user_input

./: .env  .gitignore  CMakeLists.txt  Makefile  build.py  input_unified.c  run.sh
.claude/: settings.local.json
config/: devices.conf
docs/: COMPILE_INSTRUCTIONS_WINDOWS.md  COMPILE_OPTIONS.md  C_VERSION.md  FIX_X11_INPUT_CAPTURE.md  PROMPT_FIX_X11_INPUT.md  README.md  VISUAL_STUDIO_COMPILE_GUIDE.md  VISUAL_STUDIO_QUICK_START.md  WINDOWS_PORTING_GUIDE.md  WINDOWS_QUICK_START.md
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  build_windows_msvc.ps1
server/: config_loader.py  input_server.py  layout_manager.py  requirements.txt
src/: input_unified.c
